Bug 1014246 - Don't drop the newline handling preference for the editor on the floor when it gets reinitialized. r=roc, a=lsblakk